# CV_project

./: CMakeLists.txt  README.md  license.txt
Save/: removeUsedImages.sh
Save/Test/: 001_000_covarianceDepth.matrix  001_000_covarianceRgb.matrix  002_000_covarianceDepth.matrix  002_000_covarianceRgb.matrix  003_000_covarianceDepth.matrix  003_000_covarianceRgb.matrix  004_000_covarianceDepth.matrix  004_000_covarianceRgb.matrix  005_000_covarianceDepth.matrix  005_000_covarianceRgb.matrix  006_000_covarianceDepth.matrix  006_000_covarianceRgb.matrix  007_000_covarianceDepth.matrix  007_000_covarianceRgb.matrix  008_000_covarianceDepth.matrix  008_000_covarianceRgb.matrix  009_000_covarianceDepth.matrix  009_000_covarianceRgb.matrix  010_000_covarianceDepth.matrix  010_000_covarianceRgb.matrix  011_000_covarianceDepth.matrix  011_000_covarianceRgb.matrix  012_000_covarianceDepth.matrix  012_000_covarianceRgb.matrix  (+16 more)
Train/: testDepth2  testRgb4  trainDepth0  trainDepth0.model  trainDepth1  trainDepth1.model  trainDepth2  trainDepth2.model  trainDepth3  trainDepth3.model  trainDepth4  trainDepth4.model  trainRgb0  trainRgb0.model  trainRgb1  trainRgb1.model  trainRgb2  trainRgb2.model  trainRgb3  trainRgb3.model  trainRgb4  trainRgb4.model
config/: camera_info.yaml  face_extractor.yaml  kernelDepth.txt  kernelRgb.txt  testing.yaml  training.yaml
include/: CovarianceComputer.h  Face.h  FaceExtractor.h  Pose.h  Ulbp.h  svm.h  svm_wrapper.h
src/: CRTree.cpp  CovarianceComputer.cpp  Face.cpp  FaceExtractor.cpp  Pose.cpp  main.cpp  svm.cpp  svm_wrapper.cpp
(+10 files in other folders)
